[package]
name = "dap-up-protocol-rs"
version = "0.1.0"
authors = ["tk <4tkbytes@pm.me>"]
edition = "2021"
resolver = "2"
rust-version = "1.77"

[[bin]]
name = "dap-up-protocol-rs"
harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = []

experimental = ["esp-idf-svc/experimental"]

[dependencies]
log = "0.4"
esp-idf-svc = { version = "0.51", features = ["critical-section", "embassy-time-driver", "embassy-sync"] }
embedded-svc = "0.28.1"
anyhow = "1.0.98"
toml-cfg = "0.2.0"
esp-idf-hal = { version = "0.45.2", features = ["nightly"] }
esp32-nimble = "0.11.1"
esp-idf-sys = "0.36.1"
bstr = "1.12.0"

[build-dependencies]
embuild = "0.33"
